fix spacing in text n link fix

--- a/attestation/css/style0.scss
+++ b/attestation/css/style0.scss
@@ -23,7 +23,14 @@ ul {
   list-style-type: none;
   margin: 0.5rem 0;
   margin-left: 2rem;
+  .num {
+    margin-right: 1rem;
+  }
+  .arrow {
+    margin-left: 2.3rem;
+  }
 }
+
 
 .same_line, ul li, .block-0, .block-, main {
   display: flex;
@@ -37,11 +44,11 @@ ul {
 }
 
 .gap-1 {
-  gap: 3rem ;
+  gap: 1.5rem ;
 }
 
 .gap-2 {
-  gap: 6rem ;
+  gap: 3rem ;
 }
 
 @media (min-width: 1024px) {
